--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     <title>Getting Started With Html</title>
 </head>
 <body>
-    <!-- Assignment : Getting Started With Html-->
+    <!-- Assignment : Getting Started With Html
+    Q.1) Write a simple program in HTML that displays the heading "HTML defines the content and structure of
+    your website” on the web browsers 
+    -->
+     
     <h1>HTML defines the content and structure of your website:</h1>
 </body>
 </html>
